# email-templates-i18n

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py  messages.py
src/data/: config.json  global.json
src/data/lang/: de-CH.json  en-US.json
src/templates/: email_verification.html  email_verification.txt  password_reset.html  password_reset.txt
src/templates/layouts/: base_plain.html  base_plain.txt  call_to_action.html  call_to_action.txt
utils/: preview.html  preview.py  ses_example.py
