[tool.poetry]
name = "email-templates-i18n"
version = "0.1.0"
description = ""
authors = ["Camillo Visini <c.visini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
premailer = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
fastapi = "^0.62.0"
aiofiles = "^0.6.0"
uvicorn = {extras = ["watchgodreload"], version = "^0.13.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
